syntax = "proto3";

package google.cloud.apigee.registry.v1alpha1;

import "google/protobuf/timestamp.proto";

option java_package = "com.google.cloud.apigee.registry.v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "RegistryPropertiesProto";
option go_package = "apigov.dev/registry/rpc;rpc";

// A complexity summary includes metrics on the complexity of an API.
message ComplexitySummary {
  // API Spec(s) used to compute this summary.
  repeated string spec_names = 1;

  // Number of paths.
  int32 path_count = 2;

  // Number of get operations.
  int32 get_count = 3;
  
  // Number of post operations.
  int32 post_count = 4;

  // Number of put operations.
  int32 put_count = 5;

  // Number of delete operations.
  int32 delete_count = 6;

  // Number of schemas.
  int32 schema_count = 7;

  // Number of schema properties.
  int32 schema_property_count = 8;

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 9;
}

// A Version summary contains a precalculated list of API versions.
message VersionSummary {
  // Names of API versions.
  repeated string version_names = 1;

  // Creation timestamp.
  google.protobuf.Timestamp create_time = 2;
}
